src/objects/dwp_dace__Rule_Action__c.object
<CustomObject>
    <description>Relationship between rules and actions</description>
    <fields>
        <fullName>dwp_dace__action_id__c</fullName>
        <description>Relation with an action</description>
        <inlineHelpText>Relation with an action</inlineHelpText>
        <label>Action Reference</label>
        <referenceTo>dwp_dace__Action__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>Rule_Actions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__action_link__c</fullName>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; + dwp_dace__action_id__c , dwp_dace__action_id__r.dwp_dace__action_unique_id__c ,&quot;_top&quot; ),HYPERLINK(dwp_dace__action_id__c , dwp_dace__action_id__r.dwp_dace__action_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_action_active_type__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the relationship between the rules and the actions is considered as active</description>
        <inlineHelpText>If checked, the relationship between the rules and the actions is considered as active</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_id__c</fullName>
        <description>Relation with a rule</description>
        <inlineHelpText>Relation with a rule</inlineHelpText>
        <label>Rule Reference</label>
        <referenceTo>dwp_dace__Rule__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>Rule_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_dace__rule_link__c</fullName>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK( &quot;#/sObject/&quot; + dwp_dace__rule_id__c , dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c ,&quot;_top&quot; ),HYPERLINK(dwp_dace__rule_id__c , dwp_dace__rule_id__r.dwp_dace__rule_unique_id__c,&quot;_top&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule</label>
        <type>Text</type>
    </fields>
    <label>Rule Action</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>